Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sitcon Camp 2015 Hackathon Project : ">
+    <meta name="description" content="SITCON Camp 2015 Hackathon Project : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Sitcon Camp 2015 Hackathon Project</title>
+    <title>SITCON Camp 2015 Hackathon Project</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/sitcon-camp-2015-first">View on GitHub</a>
 
-          <h1 id="project_title">Sitcon Camp 2015 Hackathon Project</h1>
+          <h1 id="project_title">SITCON Camp 2015 Hackathon Project</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
